# safer-ring

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  repomix-output.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.kiro/hooks/: rust-refactor-optimizer.kiro.hook
.kiro/specs/performance-optimizations/: design.md  requirements.md  tasks.md
.kiro/specs/progressive-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/safer-ring/: design.md  requirements.md  tasks.md
benches/: comparative_benchmarks.rs  comparative_benchmarks_main.rs  macro_benchmarks.rs  memory_benchmarks.rs  micro_benchmarks.rs.disabled  numa_benchmarks.rs  numa_benchmarks.rs.disabled  orphan_tracker_contention.rs  simple_benchmarks.rs  simple_orphan_contention.rs
benches/comparative_benchmarks/: analysis.rs  config.rs  file_benchmarks.rs  mod.rs  network_benchmarks.rs  raw_io_uring.rs  stats.rs  system_info.rs  utils.rs
docs/: API.md  CLOUD_DEPLOYMENT.md  MIGRATION_GUIDE.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  PLATFORM_COMPATIBILITY.md  SETUP_EXAMPLES.md  TESTS.md  USECASE.md
examples/: README.md  advanced_features_demo.rs  async_demo.rs  buffer_pool_demo.rs  completion_demo.rs  echo_server.rs  echo_server_main.rs  file_copy.rs  https_server.rs  https_server.rs.disabled  https_server_simple.rs  performance_demo.rs  registry_demo.rs  safer_ring_demo.rs
examples/echo_server/: client.rs  config.rs  echo_server.rs  mod.rs  stats.rs
scripts/: run_benchmarks.sh
src/: buffer.rs  compat.rs  config.rs  error.rs  lib.rs  logging.rs  ownership.rs  perf.rs  runtime.rs  safety.rs
src/advanced/: buffer_group.rs  config.rs  feature_detection.rs  mod.rs  multi_shot.rs
src/backend/: epoll.rs  io_uring.rs  mod.rs
src/buffer/: allocation.rs  generation.rs  mod.rs  numa.rs
src/future/: batch_future.rs  mod.rs  operation_future.rs  standalone_batch_future.rs  tests.rs  waker.rs
src/future/io_futures/: common.rs  file_io.rs  mod.rs  network_io.rs  vectored_io.rs
src/operation/: building.rs  completed.rs  core.rs  mod.rs  states.rs  submitted.rs  tests.rs  tracker.rs  types.rs
src/pool/: buffer_pool.rs  mod.rs  pooled_buffer.rs  stats.rs  tests.rs
src/registry/: mod.rs  tests.rs
src/ring/: batch.rs  core.rs  mod.rs  submission.rs  tests.rs
src/ring/batch/: config.rs  core.rs  mod.rs  result.rs  validation.rs
src/ring/completion/: mod.rs  result.rs
src/ring/core/: batch_operations.rs  configuration.rs  fixed_operations.rs  io_operations.rs  mod.rs  network_operations.rs  safe_operations.rs  utility.rs
tests/: backend_tests.rs  batch_lifetime_fix_demo.rs  batch_operations.rs  batch_unit_tests.rs  buffer_ownership_fix_test.rs  compile_fail.rs  comprehensive_safety_tests.rs  loom_concurrency.rs  memory_leak_detection.rs  network_operations.rs  new_features_stress_test.rs  new_safety_features_tests.rs  proptest_buffer_lifecycle.rs  run_safety_tests.rs  simple_batch_tests.rs  standalone_batch_tests.rs  stress_tests.rs
tests/compile-fail/: batch_operation_lifetime.rs  batch_operation_lifetime.stderr  buffer_concurrent_access.rs  buffer_concurrent_access.stderr  buffer_outlives_operation.rs  buffer_outlives_operation.stderr  fixed_file_use_after_unregister.rs  fixed_file_use_after_unregister.stderr  future_buffer_lifetime.rs  future_buffer_lifetime.stderr  operation_double_submit.rs  operation_double_submit.stderr  operation_extract_before_complete.rs  operation_extract_before_complete.stderr  operation_invalid_state_transition.rs  operation_invalid_state_transition.stderr  operation_modify_after_submit.rs  operation_modify_after_submit.stderr  operation_poll_before_submit.rs  operation_poll_before_submit.stderr  operation_submission_lifetime.rs  operation_submission_lifetime.stderr  operation_use_after_complete.rs  operation_use_after_complete.stderr  ownership_buffer_use_after_drop.rs  ownership_buffer_use_after_drop.stderr  pooled_buffer_outlive_pool.rs  pooled_buffer_outlive_pool.stderr  registry_buffer_use_after_unregister.rs  registry_buffer_use_after_unregister.stderr  registry_fd_use_after_unregister.rs  registry_fd_use_after_unregister.stderr  ring_drop_with_operations.rs  ring_drop_with_operations.stderr
